--- a/about.html
+++ b/about.html
@@ -7,21 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDHL - About</title>
     <meta name="description" content="About Mighty Ducks Hockey League">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <img src="images/MDHL_logo.png" alt="MDHL logo" width="250">
         <h1>Mighty Ducks Hockey League</h1>
+
         <nav>
             <a href="./index.html">Home</a>
-            <a href="#">About MDHL</a>
+            <a class="active" href="#">About</a>
             <a href="./contact.html">Contact</a>
         </nav>
+
+        <div class="headerbanner"></div>
+
+        <div class="headertittle">
+            <h2>About</h2>
+
+        </div>
     </header>
+
+
+
+    <aside>
+        <figure>
+            <img src="images/MDHL_logo.png" alt="MDHL logo" width="200">
+        </figure>
+    </aside>
+
     <main>
-        <img src="images/hockey2.jpg" alt="MDHL logo" width="250">
         <section>
+            <h3>Mision</h3>
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in learning and
                 playing soccer, with opportunities to learn and practice skills related to the game of hockey,
                 specifically those skills around team cooperation and good sportsmanship</p>
@@ -34,7 +52,6 @@
                 between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time
                 staff, and relies on the generous volunteer time of parents and previous league members</p>
         </section>
-        <h3>Mision</h3>
 
     </main>
 </body>
