--- a/contact.html
+++ b/contact.html
@@ -7,24 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDHL - Contact</title>
     <meta name="description" content="MDHL Contact page">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <img src="images/MDHL_logo.png" alt="MDHL logo" width="250">
         <h1>Mighty Ducks Hockey League</h1>
+
         <nav>
             <a href="./index.html">Home</a>
-            <a href="./about.html">About MDHL</a>
-            <a href="#">Contact</a>
+            <a href="./about.html">About</a>
+            <a class="active" href="#">Contact</a>
         </nav>
+
+        <div class="headerbanner"></div>
+
+        <div class="headertittle">
+            <h2>Contact</h2>
+        </div>
     </header>
+
+    <aside>
+        <figure>
+            <img src="images/MDHL_logo.png" alt="MDHL logo" width="200">
+        </figure>
+
+    </aside>
+
     <main>
-        <img src="images/hockey3.jpg" alt="MDHL logo" width="250">
-        <section>
+        <div class="contact">
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.</p>
-        </section>
+        </div>
     </main>
 </body>
 
