--- a/index.html
+++ b/index.html
@@ -8,22 +8,38 @@
     <title>Mighty Ducks Hockey League</title>
     <meta name="description"
         content="Mighty Ducks Hockey League official page. All you need to know about MDHL and  upcoming events.">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <img src="images/MDHL_logo.png" alt="MDHL logo" width="250">
         <h1>Mighty Ducks Hockey League</h1>
+
         <nav>
-            <a href="#">Home</a>
-            <a href="./about.html">About MDHL</a>
+            <a class="active" href="#">Home</a>
+            <a href="./about.html">About</a>
             <a href="./contact.html">Contact</a>
         </nav>
+
+        <div class="headerbanner"></div>
+
     </header>
-    <main>
-        <img src="images/hockey1.jpg" alt="MDHL logo" width="250">
-        <section>
+    
+
+        <div class="headertittle">
             <h2>Upcoming Events</h2>
+        </div>
+
+
+        <aside>
+            <figure>
+                <img src="images/MDHL_logo.png" alt="MDHL logo" width="200">
+            </figure>
+        </aside>
+        <main>
+        <section class="schedule">
+
             <h3>August 4</h3>
             <p>MDSL Fundraiser</p>
             <h3>August 16</h3>
