--- a/about.html
+++ b/about.html
@@ -18,6 +18,8 @@
         <nav>
             <a href="./index.html">Home</a>
             <a class="active" href="#">About</a>
+            <a href="./rules.html">Rules</a>
+            <a href="./game_info.html">Game Info</a>
             <a href="./contact.html">Contact</a>
         </nav>
 
