--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
         <nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
+            <a href="./rules.html">Rules</a>
+            <a href="./game_info.html">Game Info</a>
             <a class="active" href="#">Contact</a>
         </nav>
 
