--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
-    <meta name="description"
-        content="Mighty Ducks Hockey League official page. All you need to know about MDHL and  upcoming events.">
+    <meta name="description" content="Mighty Ducks Hockey League official page. All you need to know about MDHL and  upcoming events.">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
@@ -19,8 +18,10 @@
         <nav>
             <a class="active" href="#">Home</a>
             <a href="./about.html">About</a>
+            <a href="./rules.html">Rules</a>
+            <a href="./game_info.html">Game Info</a>
             <a href="./contact.html">Contact</a>
-        </nav>
+             </nav>
 
         <div class="headerbanner"></div>
 
