--- a/game_info.html
+++ b/game_info.html
@@ -20,6 +20,7 @@
             <a href="./about.html">About</a>
             <a href="./rules.html">Rules</a>
             <a class="active" href="#">Game Info</a>
+            <a href="./registration.html">Registration</a>
             <a href="./contact.html">Contact</a>
         </nav>
 
@@ -57,54 +58,95 @@
             </thead>
             <tbody>
                 <tr>
-                    <td rowspan="2">9/01</td>
+                    <td rowspan="4" style="vertical-align:top">9/01</td>
                     <td>U1 and U4</td>
                     <td>AJ Katzenmaier</td>
                     <td>9:30 a.m.</td>
+                    </tr>
+                    <tr>
+                        <td colspan="3"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d23595.335147607373!2d-87.86520785935149!3d42.33363433373202!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses!2sar!4v1675801417878!5m2!1ses!2sar" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                    </tr>
                 <tr>
                     <td>U3 and U2</td>
                     <td>Greenbay</td>
                     <td>1:00 p.m.</td>
                 </tr>
+                <tr>
+                    <td colspan="3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190097.5990561949!2d-87.76149975348136!3d41.88694287975413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1675801661971!5m2!1ses!2sar" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                </tr>
+
+
 
                 <tr>
-                    <td rowspan="2">9/08</td>
+                    <td rowspan="4" style="vertical-align:top">9/08</td>
                     <td>U5 and U6</td>
                     <td>Howard A Yeager</td>
                     <td>9:30 a.m.</td>
+                <tr>
+                    <td colspan="3"><iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11801.080246623287!2d-87.8538811!3d42.3154383!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1675799189106!5m2!1ses!2sar"
+                            width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                </tr>
+                
                 <tr>
                     <td>U6 and U1</td>
                     <td>Marjorie P Hart</td>
                     <td>1:00 p.m.</td>
                 </tr>
-
                 <tr>
-                    <td rowspan="2">9/15</td>
+                    <td colspan="3"><iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11798.878466491737!2d-87.8456879!3d42.3271787!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fecd0628e1bb5%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses!2sar!4v1675800970853!5m2!1ses!2sar"
+                            width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                </tr>
+                <tr>
+                    <td rowspan="4" style="vertical-align:top">9/15</td>
                     <td>U2 and U4</td>
                     <td>North</td>
                     <td>9:30 a.m.</td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11791.039398182746!2d-87.8519544604492!3d42.36895699999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fed60b13aa0a7%3A0xfe6df83b0f197ed6!2sNorth%20Elementary%20School!5e0!3m2!1ses!2sar!4v1675802111818!5m2!1ses!2sar" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                    </tr>
+
                 <tr>
                     <td>U3 and U5</td>
                     <td>AJ Katzenmaier</td>
                     <td>1:00 p.m.</td>
                 </tr>
+
                 <tr>
-                    <td rowspan="2">9/22</td>
+                    <td colspan="3"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d23595.335147607373!2d-87.86520785935149!3d42.33363433373202!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses!2sar!4v1675801417878!5m2!1ses!2sar" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                </tr>
+
+                <tr>
+                    <td rowspan="4" style="vertical-align:top">9/22</td>
                     <td>U1 and U3</td>
                     <td>South</td>
                     <td>9:30 a.m.</td>
+                </tr>
+                <tr>
+                    <td colspan="3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39698.7819304609!2d-87.87079377183314!3d42.30776786910251!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses!2sar!4v1675801871640!5m2!1ses!2sar" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                </tr>
                 <tr>
                     <td>U2 and U6</td>
                     <td>Howard A Yeager</td>
                     <td>1:00 p.m.</td>
                 </tr>
+                                <tr>
+                    <td colspan="3"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11801.080246623287!2d-87.8538811!3d42.3154383!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1675799189106!5m2!1ses!2sar" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                </tr>
                 <tr>
-                    <td>9/29</td>
+                    <td rowspan="2" style="vertical-align:top">9/29</td>
                     <td>U4 and U5</td>
                     <td>Greenbay</td>
                     <td>9:30 a.m.</td>
                 </tr>
-
+<tr>
+    <td colspan="3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190097.5990561949!2d-87.76149975348136!3d41.88694287975413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1675801661971!5m2!1ses!2sar" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+</tr>
             </tbody>
         </table>
 
