--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="./about.html">About</a>
             <a href="./rules.html">Rules</a>
             <a href="./game_info.html">Game Info</a>
+            <a href="./registration.html">Registration</a>
             <a href="./contact.html">Contact</a>
              </nav>
 
